k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internship
  labels:
    name: internship
    environment: minikube
