k8s/authdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authdb
  namespace: internship
  labels:
    app: authdb
    tier: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authdb
  template:
    metadata:
      labels:
        app: authdb
        tier: data
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: authdb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: authdb
  namespace: internship
  labels:
    app: authdb
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: authdb
