k8s/paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: internship
  labels:
    app: paymentservice
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
        tier: backend
    spec:
      containers:
        - name: paymentservice
          image: paymentservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8084
          resources:
            requests:
              memory: 384Mi
              cpu: 200m
            limits:
              memory: 768Mi
              cpu: 500m
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: internship
  labels:
    app: paymentservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8084
      targetPort: 8084
  selector:
    app: paymentservice
